Commit and merge